Added filterStopWords